Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -461,7 +461,7 @@
    "source": [
     "name = 'Liz Kaplan'\n",
     "\n",
-    "email = 'liz@ka-plan.com'"
+    "email = 'liz@ka-plan.com'\n"
    ]
   },
   {
