Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -462,7 +462,7 @@
     "name = 'Liz Kaplan'\n",
     "\n",
     "email = 'liz@ka-plan.com'\n",
-    "variable"
+    "variable= 'new data'"
    ]
   },
   {
