Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -492,16 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art.vandelay@vandelay.co'"
+       "'liz@ka-plan.com'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
    },
    "outputs": [],
    "source": [
-    "name"
+    "name # Liz"
    ]
   },
   {
